--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,40 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+buildscript {
+
+    ext {
+        kotlin_version = '1.4.10'
+    }
+    repositories {
+        jcenter()
+        google()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.10"
+    }
 }
+
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+    tasks.withType(JavaCompile) {    //设置全局编码
+        options.encoding = "UTF-8"
+    }
+    tasks.withType(Javadoc) {  //设置文档编码
+        options {
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
+        }
+    }
+    task javadoc(type: Javadoc) {
+        failOnError false
+    }
+}
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
