--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.lzx.LooperMonitor"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -26,8 +26,15 @@ android {
         targetCompatibility 1.8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     dependencies {
         implementation 'androidx.appcompat:appcompat:1.2.0'
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
+        implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
+        implementation 'androidx.recyclerview:recyclerview:1.2.1'
         implementation project(':library')
     }
 }
